--- a/css/style.css
+++ b/css/style.css
@@ -229,10 +229,10 @@ ul a:hover {
 .socialbutton {
   text-align: center;
 }
-#ig {
+#igbutton {
   text-align: center;
 }
-#in {
+#inbutton {
   text-align: center;
 /** warhol page**/
 
